# MCPs

./: .gitignore  LICENSE  README.md
mcpclientgit/: Cargo.toml
mcpclientgit/src/: main.rs
